Fix issues discussed in the code review