@@ -32,6 +32,7 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
 
 import static org.wso2.ballerinalang.compiler.util.ProjectDirConstants.BALLERINA_HOME;
@@ -73,26 +74,37 @@ public class RunTestsTask implements Task {
             //     <org-name>/<package-name>:<version>
             //         No tests found
             // }
-            Path jarPath = buildContext.getTestJarPathFromTargetCache(packageID);
-            Path modulejarPath = buildContext.getJarPathFromTargetCache(packageID);
-            Path jarFileName = modulejarPath.getFileName();
-            String moduleJarName = jarFileName != null ? jarFileName.toString() : "";
+            Path testJarPath = buildContext.getTestJarPathFromTargetCache(packageID);
+            Path testModuleJarPath = buildContext.getJarPathFromTargetCache(packageID);
+            Path testModuleJarFile = testModuleJarPath.getFileName();
+            String testModuleJarFileName = testModuleJarFile != null ? testModuleJarFile.toString() : "";
             // subsitute test jar if module jar if tests not exists
-            if (Files.notExists(jarPath)) {
-                jarPath = modulejarPath;
+            if (Files.notExists(testJarPath)) {
+                testJarPath = testModuleJarPath;
             }
 
             if (this.generateCoverage) {
                 String orgName = bLangPackage.packageID.getOrgName().toString();
                 String packageName = bLangPackage.packageID.getName().toString();
-                generateCoverageReportForTestRun(moduleJarName, jarPath, sourceRootPath, targetDirPath,
+                generateCoverageReportForTestRun(testModuleJarFileName, testJarPath, sourceRootPath, targetDirPath,
                         orgName, packageName, buildContext);
             } else {
-                readDataFromJsonAndMockTheTestSuit(moduleJarName, targetDirPath, jarPath, buildContext);
+                readDataFromJsonAndLaunchTestSuit(testModuleJarFileName, targetDirPath, testJarPath, buildContext);
             }
         }
     }
 
+    /**
+     * Generate the coverage report from a test run.
+     *
+     * @param moduleJarName file name to search for a directory
+     * @param testJarPath path to the this testable jar file
+     * @param sourceRootPath path of the source root.
+     * @param targetDirPath path of the target directory
+     * @param orgName organization name derived from the bLangPackage
+     * @param packageName package name derived from the bLangPackage
+     * @param buildContext buildContext to show some basic outputs
+     */
     private void generateCoverageReportForTestRun(String moduleJarName, Path testJarPath, Path sourceRootPath,
                                                   Path targetDirPath, String orgName, String packageName,
                                                   BuildContext buildContext) {
@@ -101,7 +113,7 @@ public class RunTestsTask implements Task {
         boolean execFileGenerated = coverageBuilder.generateExecFile();
         buildContext.out().println("\nGenerating the coverage report");
         if (execFileGenerated) {
-            buildContext.out().println("\tballerina.exec is generated");
+            buildContext.out().println("\tCoverage is generated");
             // unzip the compiled source
             coverageBuilder.unzipCompiledSource();
             // copy the content as described with package naming
@@ -111,23 +123,42 @@ public class RunTestsTask implements Task {
             coverageBuilder.generateCoverageReport();
             buildContext.out().println("\nReport is generated. visit target/coverage to see the report.");
         } else {
-            buildContext.out().println("Couldn't create the ballerina.exec file");
+            buildContext.out().println("Couldn't create the Coverage. Please try again.");
         }
     }
 
-    private void readDataFromJsonAndMockTheTestSuit(String moduleJarName, Path targetPath, Path testJarPath,
-                                                    BuildContext buildContext) {
-        Path jsonPath = targetPath.resolve(ProjectDirConstants.CACHES_DIR_NAME)
+    /**
+     * Run the tests by reading and passing data from a json file.
+     *
+     * @param moduleJarName directory to find the json file
+     * @param targetPath target path to resolve the json cache directory
+     * @param testJarPath path of the thin testable jar
+     * @param buildContext build context to show some basic outputs
+     */
+    private void readDataFromJsonAndLaunchTestSuit(String moduleJarName, Path targetPath, Path testJarPath,
+                                                   BuildContext buildContext) {
+        Path jsonCachePath = targetPath.resolve(ProjectDirConstants.CACHES_DIR_NAME)
                 .resolve(ProjectDirConstants.JSON_CACHE_DIR_NAME).resolve(moduleJarName);
         Path balDependencyPath = Paths.get(System.getProperty(BALLERINA_HOME)).resolve(BALLERINA_HOME_BRE)
                 .resolve(BALLERINA_HOME_LIB);
         String javaCommand = System.getProperty("java.command");
-        String mainClassName = TesterinaConstants.TESTERINA_LAUNCHER_CLASS_NAME;
-        // TODO: remove the Djava.ext.dirs
-        String runningCommand = javaCommand + " -Djava.ext.dirs=" + balDependencyPath.toString() + " -cp "
-                + testJarPath.toString() + " " + mainClassName + " " + jsonPath.toString();
+        String filePathSeparator = System.getProperty("file.separator");
+        String classPathSeparator = System.getProperty("path.separator");
+        String launcherClassName = TesterinaConstants.TESTERINA_LAUNCHER_CLASS_NAME;
+        String classPaths = balDependencyPath.toString() + filePathSeparator + "*"
+                + classPathSeparator + testJarPath.toString();
+
+        // building the java command
+        List<String> commands = new ArrayList<>();
+        commands.add(javaCommand); // java command that is used by ballerina
+        commands.add("-cp"); // terminal option to set the classpaths
+        commands.add(classPaths); // set the class paths including testable thin jat
+        commands.add(launcherClassName); // launcher main class name
+        commands.add(jsonCachePath.toString()); // json cache path as a command line argument
+
         try {
-            Process proc = Runtime.getRuntime().exec(runningCommand);
+            ProcessBuilder processBuilder = new ProcessBuilder(commands);
+            Process proc = processBuilder.start();
             proc.waitFor();
 
             // Then retrieve the process output
